<resources>
    <string name="app_name">EpiCode</string>
    <string name="cplusplus_meaning">C++ is an object-oriented programming (OOP) language that is viewed by many as the best language for creating large-scale applications. C++ is a superset of the C language. A related programming language, Java, is based on C++ but optimized for the distribution of program objects in a network such as the Internet.</string>
    <string name="c17">
     •	The C++ language defines several headers, which contain information that is either necessary or useful to your program. For this program, the header ionstream is needed \n
     •	The line using namespace std; tells the compiler to use the std namespace. Namespaces are a relatively recent addition to C++.\n
     •	The next line // main() is where program execution begins. is a single-line comment available in C++. Single-line comments begin with // and stop at the end of the line. \n
     •	The line int main() is the main function where program execution begins. \n
     •	The next line cout "Hello World"; causes the message "Hello World" to be displayed on the screen. \n
     •	The next line return 0; terminates main( )function and causes it to return the value 0 to the calling process. \n\n\n

Compile and Execute C++ Program \n
     •	Open a text editor and add the code as above. \n
     •	Save the file as: hello.cpp \n
     •	Open a command prompt and go to the directory where you saved the file. \n
     •	Type "g++ hello.cpp" and press enter to compile your code. If there are no errors in your code the command prompt will take you to the next line and would generate a.out executable file.  \n
     •	Now, type "a.out" to run your program. \n
     •	You will be able to see "Hello World" printed on the window. \n
</string>
    <string name="javascript_meaning">JavaScript is a lightweight, interpreted programming language. It is designed for creating network-centric applications. It is complimentary to and integrated with Java. JavaScript is very easy to implement because it is integrated with HTML. It is open and cross-platform.</string>
    <string name="javascript">
<![CDATA[
\n\nJavaScript is one of the 3 languages all web developers must learn:\n\n
   1. HTML to define the content of web pages\n
   2. CSS to specify the layout of web pages\n
   3. JavaScript to program the behaviour of web pages\n\n

]]></string>
    <string name="javascriptsyntax">
<![CDATA[
JavaScript syntax is the set of rules, how JavaScript programs are constructed:\n\n
var x, y, z;       // Declare Variables\n
x = 5; y = 6;      // Assign Values\n
z = x + y;         // Compute Values\n\n
JavaScript Values\n\n
The JavaScript syntax defines two types of values:\n
•	Fixed values\n
•	Variable values\n
Fixed values are called Literals.\n
Variable values are called Variables.\n

]]></string>
    <string name="javascriptliterals"><![CDATA[
The two most important syntax rules for fixed values are:\n
1. Numbers are written with or without decimals:\n\n
10.50\n\n

1001\n\n
2. Strings are text, written within double or single quotes:\n\n
"John Doe"\n\n

"John Doe"\n\n

]]></string>
    <string name="javascriptvariables"><![CDATA[
In a programming language, variables are used to store data values.\n
JavaScript uses the var keyword to declare variables.\n
An equal sign is used to assign values to variables.\n
In this example, x is defined as a variable. Then, x is assigned (given) the value 6:\n\n
var x;\n\n

x = 6;\n\n

]]></string>
    <string name="javascriptoperators">
        JavaScript uses arithmetic operators ( + - * / ) to compute values:\n
    </string>
    <string name="javascriptifstatement"><![CDATA[
The if statement\n\n
The if statement is the fundamental control statement that allows JavaScript to make decisions and execute statements conditionally.\n\n
Syntax\n\n
if (expression) {\n
   Statement(s) to be executed if expression is true\n
}\n\n


The if...else statement\n\n

The "if...else" statement is the next form of control statement that allows JavaScript to execute statements in a more controlled way.\n\n
Syntax\n\n
if (expression) {\n
   Statement(s) to be executed if expression is true\n
} else {\n
   Statement(s) to be executed if expression is false\n
}\n\n

 The if...else if... statement\n
The if...else if... statement is an advanced form of if…else that allows JavaScript to make a correct decision out of several conditions.\n\n
Syntax\n\n
if (expression 1) {\n
   Statement(s) to be executed if expression 1 is true\n
} else if (expression 2) {\n
   Statement(s) to be executed if expression 2 is true\n
} else if (expression 3) {\n
   Statement(s) to be executed if expression 3 is true\n
} else {\n
   Statement(s) to be executed if no expression is true\n
}\n
]]></string>
    <string name="javascriptswithcstatement"><![CDATA[
The objective of a switch statement is to give an expression to evaluate and several different statements to execute based on the value of the expression. The interpreter checks each case against the value of the expression until a match is found. If nothing matches, a default condition will be used.\n\n
switch (expression) {\n
   case condition 1: statement(s)\n
   break;\n
   case condition 2: statement(s)\n
   break;\n
   ...\n
   case condition n: statement(s)\n
   break;\n
   default: statement(s)\n\n
]]></string>
    <string name="javascriptwhileloop"><![CDATA[
The most basic loop in JavaScript is the while loop which would be discussed in this chapter. The purpose of a while loop is to execute a statement or code block repeatedly as long as an expression is true. Once the expression becomes false, the loop terminates.\n\n
Syntax\n\n
while (expression) {\n
   Statement(s) to be executed if expression is true\n
}\n\n
]]></string>
    <string name="javascriptdowhileloop"><![CDATA[
The do...while Loop\n
The do...while loop is similar to the while loop except that the condition check happens at the end of the loop. This means that the loop will always be executed at least once, even if the condition is false.\n\n
Syntax\n
do {\n
   Statement(s) to be executed;\n
} while (expression);\n\n

]]></string>
    <string name="javascriptloopstatement"><![CDATA[

The "for" loop is the most compact form of looping. It includes the following three important parts −\n
•	The loop initialization where we initialize our counter to a starting value. The initialization statement is executed before the loop begins.\n
•	The test statement which will test if a given condition is true or not. If the condition is true, then the code given inside the loop will be executed, otherwise the control will come out of the loop.\n
•	The iteration statement where you can increase or decrease your counter.\n
You can put all the three parts in a single line separated by semicolons.\n\n
Syntax\n\n
for (initialization; test condition; iteration statement) {\n
   Statement(s) to be executed if test condition is true\n
}\n
 ]]></string>
    <string name="python_meaning">
Python is a general-purpose interpreted, interactive, object-oriented, and high-level programming language. It was created by Guido van Rossum during 1985- 1990. Like Perl, Python source code is also available under the GNU General Public License (GPL). I will list down some of the key advantages of learning Python:\n\n
•	Python is Interpreted − Python is processed at runtime by the interpreter. You do not need to compile your program before executing it. This is similar to PERL and PHP.\n
•	Python is Interactive − You can actually sit at a Python prompt and interact with the interpreter directly to write your programs.\n
•	Python is Object-Oriented − Python supports Object-Oriented style or technique of programming that encapsulates code within objects.\n
•	Python is a Beginners Language − Python is a great language for the beginner-level programmers and supports the development of a wide range of applications from simple text processing to WWW browsers to games.\n
</string>
    <string name="python_syntax"><![CDATA[
        As we learned in the previous page, Python syntax can be executed by writing directly in the Command Line:\n\n

>>> print("Hello, World!")\n
Hello, World!\n\n
]]></string>
    <string name="pythonindentation"><![CDATA[
Indentation refers to the spaces at the beginning of a code line.\n
Where in other programming languages the indentation in code is for readability only, the indentation in Python is very important.\n
Python uses indentation to indicate a block of code.\n\n
Example\n
if 5 > 2:\n
  print("Five is greater than two!")\n\n
]]></string>
    <string name="pythonvariales"><![CDATA[
In Python, variables are created when you assign a value to it:\n\n
Example\n\n
x = 5\n
y = "Hello, World!"\n\n
]]></string>
    <string name="pythoncomments"><![CDATA[
Comments start with a #, and Python will render the rest of the line as a comment:\n\n
Example:\n
#This is a comment.\n\n
print("Hello, World!")\n\n
]]></string>
    <string name="pythonelif"><![CDATA[
The elif keyword is pythons way of saying "if the previous conditions were not true, then try this condition".\n\n
Example\n
a = 33\n
b = 33\n
if b > a:\n
  print("b is greater than a")\n
elif a == b:\n
  print("a and b are equal")\n\n
In this example a is equal to b, so the first condition is not true, but the elif condition is true, so we print to screen that "a and b are equal".\n\n
]]></string>
    <string name="pythonelse"><![CDATA[
The else keyword catches anything which isnt caught by the preceding conditions.\n
Example\n\n
a = 200\n
b = 33\n
if b > a:\n
  print("b is greater than a")\n
elif a == b:\n
  print("a and b are equal")\n
else:\n
  print("a is greater than b")\n\n
You can also have an else without the elif:\n\n
]]></string>
    <string name="pythonshorthandif"><![CDATA[
If you have only one statement to execute, you can put it on the same line as the if statement.\n\n
Example\n\n
One line if statement:\n
if a > b: print("a is greater than b")\n\n
]]></string>
    <string name="pythonshorthandifelse"><![CDATA[
If you have only one statement to execute, one for if, and one for else, you can put it all on the same line:\n\n
Example\n\n
One line if else statement:\n
a = 2\n
b = 330\n
print("A") if a > b else print("B")\n
This technique is known as Ternary Operators, or Conditional Expressions.\n\n
]]></string>
    <string name="pythonand"><![CDATA[
The and keyword is a logical operator, and is used to combine conditional statements:\n\n
Example\n\n
Test if a is greater than b, AND if c is greater than a:\n
a = 200\n
b = 33\n
c = 500\n
if a > b and c > a:\n
  print("Both conditions are True")\n\n
]]></string>
    <string name="pythonor"><![CDATA[
The or keyword is a logical operator, and is used to combine conditional statements:\n\n
Example\n\n
Test if a is greater than b, OR if a is greater than c:\n\n
a = 200\n
b = 33\n
c = 500\n
if a > b or a > c:\n
  print("At least one of the conditions is True")\n\n
]]></string>
    <string name="pythonnestedif"><![CDATA[
You can have if statements inside if statements, this is called nested if statements.\n\n
Example\n\n
x = 41\n\n

if x > 10:\n
  print("Above ten,")\n
  if x > 20:\n
    print("and also above 20!")\n
  else:\n
    print("but not above 20.")\n\n
The pass Statement\n
if statements cannot be empty, but if you for some reason have an if statement with no content, put in the pass statement to avoid getting an error.\n\n
Example\n\n
a = 33\n
b = 200\n\n

if b > a:\n
  pass\n\n


]]></string>
</resources>